# mcp-freework

./: README.md  batch.py  main.py  pyproject.toml  run_batch.sh  server.py  start_mcp_server.sh  todo.md
src/: __init__.py  freework_scraper.py
tools/: __init__.py  freework_tools.py
