[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-freework"
version = "0.1.0"
description = "Serveur MCP pour accéder aux missions de Free-Work.com"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Franck", email = "franck@example.com"}
]
dependencies = [
    "mcp-python-core>=0.1.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = ["src", "tools"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
